--- a/index.html
+++ b/index.html
@@ -229,6 +229,54 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="section__4">
+            <div class="cars"><img class="cars__car" src="images/Image 2.png"> </div>
+            <div class="cars__background">
+                <h3 class="cars__heading"> Get in touch with us for your service related query</h3>
+                <button class="cars__button"> Contact Us</button>
+            </div>
+            <div class="cars__online"><img class="cars__online-car" src="images/ovGrEUgrkyE.png" alt="online car"></div>
+        </div>
+        <div class="cars__experience">
+            <div class="cars__review">
+                <h2 class="review__heading"> 20+</h2>
+                <p class="review__paragraph">Professional</p>
+            </div>
+            <div class="cars__review">
+                <h2 class="review__heading">10+</h2>
+                <p class="review__paragraph">Years Experience</p>
+            </div>
+            <div class="cars__review">
+                <h2 class="review__heading">12K+</h2>
+                <p class="review__paragraph">Service closed</p>
+            </div>
+            <div class="cars__review">
+                <h2 class="review__heading">100%</h2>
+                <p class="review__paragraph">Satisfaction</p>
+            </div>
+        </div>
+        </div>
+    </section>
+    <section>
+        <div class="section__5">
+            <div class="brands">
+                <h2 class="brands__heading">Brands we Serve</h2>
+            </div>
+            <div class="brands__image">
+                <div class="brands__img"><img class="brands__pix" src="images/logo-8 1.png"> </div>
+                <div class="brands__img"><img class="brands__pix" src="images/logo-6.png"> </div>
+                <div class="brands__img"><img class="brands__pix" src="images/logo-7 1.png"></div>
+                <div class="brands__img"><img class="brands__pix" src="images/logo-3.png"> </div>
+                <div class="brands__img"><img class="brands__pix" src="images/logo-1 1.png"> </div>
+                <div class="brands__img"><img class="brands__pix" src="images/logo-8 1.png"> </div>
+                <div class="brands__img"><img class="brands__pix" src="images/logo-6.png"> </div>
+                <div class="brands__img"><img class="brands__pix" src="images/logo-7 1.png"> </div>
+                <div class="brands__img"><img class="brands__pix" src="images/logo-3.png"> </div>
+                <div class="brands__img"><img class="brands__pix" src="images/logo-1 1.png"> </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
