--- a/index.html
+++ b/index.html
@@ -6,13 +6,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet" type="text/css">
-    <title>github assignment</title>
+    <link href="queries.css" rel="stylesheet" type="text/css">
+    <title>Finsweet</title>
 </head>
 
 <body>
+    <div class="navigation">
+        <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+
+        <label for="navi-toggle" class="navigation__button">
+            <span class="navigation__icon"> &nbsp; </span>
+        </label>
+
+        <div class="navigation__background">&nbsp;</div>
+
+        <nav class="navigation__nav">
+            <h4 class="navigation__heading">
+                {finsweet
+            </h4>
+            <ul class="navigation__list">
+                <li class="navigation__item"><a href="#" class="navigation__link">Home</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link">About us</a></li>
+                <li class="navigation__item"><a href="services.html" class="navigation__link">Services</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link">Blog</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link">Contact</a></li>
+            </ul>
+            <div class="navigation__image">
+                <img width="50px" class="navigation__img" src="images/Assistance Icon.png" alt="whatsapp logo">
+                <div class="finsweet__story">
+                    <p class="navigation__paragraph">Road Assistance</p>
+                    <p>1800 2565 24 52</p>
+                </div>
+            </div>
+        </nav>
+
+    </div>
     <header>
         <div class="container">
-            <nav class="navigation">
+            <nav class="navigation2">
                 <h4 class="finsweet__heading">
                     {finsweet
                 </h4>
@@ -20,13 +51,13 @@
                     <ul class="finsweet__order">
                         <li class="finsweet__list"><a class="finsweet__links" href="#">Home</a></li>
                         <li class="finsweet__list"><a class="finsweet__links" href="#">About us</a></li>
-                        <li class="finsweet__list"><a class="finsweet__links" href="#">Services</a></li>
+                        <li class="finsweet__list"><a class="finsweet__links" href="services.html">Services</a></li>
                         <li class="finsweet__list"><a class="finsweet__links" href="#">Blog</a></li>
                         <li class="finsweet__list"><a class="finsweet__links" href="#">Contact</a></li>
                     </ul>
                 </div>
                 <div class="finsweet__image">
-                    <img class="img__design" src="images/istockphoto-1250911025-170667a.jpg" alt="whatsapp logo">
+                    <img class="img__design" src="images/Assistance Icon.png" alt="whatsapp logo">
                     <div class="finsweet__story">
                         <p class="roadassistance">Road Assistance</p>
                         <p>1800 2565 24 52</p>
@@ -127,7 +158,7 @@
                     </div>
                 </div>
                 <div class="form__button-parent">
-                    <button class="form__button">Get your quote</button>
+                    <button class="form__button ">Get your quote</button>
                 </div>
             </div>
         </div>
@@ -143,7 +174,7 @@
                         every him case in packages enquire</p>
                 </div>
                 <div class="form__button-parent">
-                    <button class="form__button">Get your quote</button>
+                    <button class="form__button fb-big">Get your quote</button>
                 </div>
             </div>
             <div class="example">
@@ -237,7 +268,7 @@
                 <button class="cars__button"> Contact Us</button>
             </div>
             <div class="cars__online"><img class="cars__online-car" src="images/ovGrEUgrkyE.png" alt="online car"></div>
-        </div>
+       
         <div class="cars__experience">
             <div class="cars__review">
                 <h2 class="review__heading"> 20+</h2>
@@ -277,6 +308,126 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="section__6">
+            <div class="testimonial__heading">
+                <h3 class="testimonial__heading-big"> Our customers say the nicest things about our services</h3>
+            </div>
+            <div class="testimonial__page">
+                <div class="testimonial__1">
+                    <div class="testimonial__group">
+                        <div><img class="testimonial__img" src="images/K84vnnzxmTQ.png" alt="testimonial image1"></div>
+                        <div class="testimonial__grouping">
+                            <h5 class="testimonial__heading-small"> Jonathan Vallem</h5>
+                            <p class="testimonial__paragraph"> New york</p>
+                        </div>
+                    </div>
+                    <div>
+                        <p>I have got my car repaired at Finsweet many times before, they are good at what they do. <br>Not only did they repair my car in a short comprehensive look on all the working</p>
+                    </div>
+                </div>
+                <div class="testimonial__2">
+                    <div class="testimonial__group">
+                        <div><img class="testimonial__img" src="images/nJHvhXS4C0U.jpg" alt="testimonial image2"></div>
+                        <div class="testimonial__grouping">
+                            <h5 class="testimonial__heading-small"> Smith Johnson</h5>
+                            <p class="testimonial__paragraph"> New york</p>
+                        </div>
+                    </div>
+                    <div>
+                        <p>I have got my car repaired at Finsweet many times before, they are good at what they do. <br>Not only did they repair my car in a short comprehensive look on all the working</p>
+                    </div>
+                </div>
+            </div>
+            <div class="testimonial__carousel">
+                <div class="testimonial__line"><img src="images/Lines.png" alt="lines"></div>
+                <div ><img class="testimonial__left" src="images/Left.png" alt="left"></div>
+                <div class="testimonial__right"><img class="testimonial__right2" src="images/Right.png" alt="right"></div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="section__7">
+            <div class="questions__heading">
+                <h3 class="questions__heading-big">Frequently Asked Questions</h3>
+            </div>
+            <div class="questions__page">
+                <div class="question__group">
+                    <div>
+                        <h4>How long should a car repair take?</h4>
+                        <p class="question__paragraph">I have got my car repaired at Finsweet many times before, they are good at what they do. Not only did they repair my car, i have got my car repaired at Finsweet, i have got my car repaired at Finsweet</p>
+                    </div>
+                    <div><img width="40px" src="images/Orange(1).png" alt="open"></div>
+                </div>
+                <div class="question__group">
+                    <div>
+                        <h4>How do i schedule my car's Appointment?</h4>
+                    </div>
+                    <div><img width="40px" src="images/Orange.png" alt="closed"></div>
+                </div>
+                <div class="question__group">
+                    <div>
+                        <h4>What are the repair services provided?</h4>
+                    </div>
+                    <div><img width="40px" src="images/Orange.png" alt="closed"></div>
+                </div>
+                <div class="question__group">
+                    <div>
+                        <h4>How do i find auto body shops near me?</h4>
+                    </div>
+                    <div><img width="40px" src="images/Orange.png" alt="closed"></div>
+                </div>
+                <div  class="question__group">
+                    <div>
+                        <h4>Genuine spare parts during car repairs?</h4>
+                    </div>
+                    <div><img width="40px" src="images/Orange.png" alt="closed"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="footer">
+            <div class="footer__services">
+                <div>
+                    <h3 class="footer__heading">Get in touch with us for your service</h3>
+                </div>
+                <div>
+                    <img class="footer__icon" src="images/facebook.png" alt="facebook">
+                    <img class="footer__icon" src="images/twitter.png" alt="twitter">
+                    <img class="footer__icon" src="images/Instagram.png" alt="Instagram">
+                    <img class="footer__icon" src="images/linkedln.png" alt="linkedln">
+                </div>
+            </div>
+            <div class="footer__helpline">
+                <div>
+                    <p class="footer__paragraph">Help line Number</p>
+                    <h5 class="footer___heading-small">1800 265 24 52</h5>
+                </div>
+                <div>
+                    <p class="footer__paragraph">Address</p>
+                    <h5 class="footer___heading-small">NH 234 Public Square San Francisco 65368</h5>
+                </div>
+                <div>
+                    <p class="footer__paragraph">we are open</p>
+                    <h5 class="footer___heading-small">Monday to Friday 9:00 AM to 10:00 AM</h5>
+                </div>
+            </div>
+            <div class="footer__bottom">
+                <div><h5 class="footer__bottom-heading">{finsweet</h5></div>
+                <div>
+                    <ul  class="footer__bottom-list">
+                    <li><a class="footer__bottom-links" href="index.html">Home</a></li>
+                    <li><a class="footer__bottom-links" href="#">About us</a></li>
+                    <li><a class="footer__bottom-links" href="services.html">Services</a></li>
+                    <li><a class="footer__bottom-links" href="#">Blog</a></li>
+                    <li><a class="footer__bottom-links" href="#">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div><p class="footer__bottom-paragraph">@copyright Finsweet 2021</p></div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
