--- a/services.html
+++ b/services.html
@@ -39,6 +39,7 @@
         </ul>
         <div class="navigation__image">
           <img
+            class="navigation__img"
             width="50px"
             src="images/Assistance Icon.png"
             alt="whatsapp logo"
